introduce pmd and checkstyle build-tools and tone down javadoc failures (#762)
* introduce pmd and checkstyle build-tools and tone down javadoc failures
* Update developing instructions
* Start off using checkstyle to ensure the presense of JTS header
* Fix pmd error parsing TestBufferFailure.xml
* Address PMD failure for useless override
* address pmd failure unused imports
* Address PMD failure for loop that should be whilte
* GeometryInspectorDialog was ignoring frame parameter
* refactor package.html to package-info.java
* Use properties to control lint and doclint

Signed-off-by: Jody Garnett <jody.garnett@gmail.com>