@@ -403,7 +403,7 @@ public class FileDrop
             catch( Exception e )
             {   support = false;
             }   // end catch
-            supportsDnD = new Boolean( support );
+            supportsDnD = Boolean.valueOf( support );
         }   // end if: first time through
         return supportsDnD.booleanValue();
     }   // end supportsDnD
